# cal-raleigh-hr-simulation

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 01-beta-binomial.ipynb  01-query-data.ipynb  02-hierarchical-model.ipynb
src/: modeling.py  processing.py
src/mcmc_hr_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
